--- a/index.html
+++ b/index.html
@@ -17,5 +17,6 @@
   <button onclick="checkout()">Оформить заказ</button>
 
   <script src="script.js"></script>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
